add dp chapter solutions